--- a/_posts/2019-04-16-C-对象模型.md
+++ b/_posts/2019-04-16-C-对象模型.md
@@ -4,27 +4,108 @@ date: 2019-04-16 10:33:51
 tags:
 ---
 
+不同的编译器对于对象模型的实现可能会不一样。编译器的功能是将 C++ 代码转换为汇编语言，而汇编语言是一系列的操作寄存器及内存的代码，也就是说在编译的时候，编译器就确定了对象在内存中是如何存在的（通过生成对应的汇编语言）。
+
 # 构造函数语意学
 
 ## 默认构造函数的构造操作
 
 - 编译器的需要
-- 程序的需要
+- 程序的需要：为成员执行初始化应该是程序员的责任
 - trivial constructor
 - nontrivial constructor
 
+>总的来说就是，按照C++ Standrand，如果用户没有声明，那么会隐式的声明一个，但是会不会合成取决于声明出的是trivial还是nontrivial
+
+以下四种情况会声明 notrival 的构造函数，即编译器会为未声明构造函数的类合成一个默认构造函数
+- 类包含带有默认构造函数的成员
+- 类继承自带有默认构造函数的基类
+- 类带有一个虚函数
+    - 类声明或继承了一个虚函数
+    - 类派生自一个继承串链，其中有一个或更多的虚基类
+- 类带有一个虚基类
+
 ## 拷贝构造函数的构造操作
 
-- Memberwise Initialization
-- Bitwise Copy Semantics
+- 默认逐成员初始化(Default Memberwise Initialization)
+- 逐成员初始化(Memberwise Initialization)
+- 位逐次拷贝(Bitwise Copy Semantics)
+
+>总的来说就是，按照C++ Standrand，如果用户没有声明，那么会隐式的声明一个，但是会不会合成取决于声明出的是trivial还是nontrivial
+
+如果一个类没有定义显示的拷贝构造函数，那么编译器是否会为其合成取决于类是否展现“位逐次拷贝”
+
+- 如果类展现“位逐次拷贝”，则编译器不需要合成一个默认的拷贝构造函数
+- 如果类不展现“位逐次拷贝”，则编译器必须合成出一个默认的拷贝构造函数。包括下列4种情况：
+    - 当类包含具有拷贝构造函数的成员时
+    - 当类继承自一个具有拷贝构造函数的基类时
+    - 当类声明了一个或多个虚函数时
+      - 如果“位逐次拷贝”则会导致虚函数指针指向被拷贝的对象的虚函数
+    - 当类派生自一个继承串链，其中有一个或多个虚基类时
 
 ## 程序转换语意学
 
+```C++
+class Test
+{
+public:
+    Test() { cout << "默认构造函数" << endl;}
+    Test(const Test &t) { cout << "拷贝构造函数" << endl;}
+};
+
+Test foo(){
+    Test t;
+    return t;
+}
+
+int main(){
+    //输出：默认构造函数
+    Test t = foo();
+    return 0;
+}
+```
+
 ## 成员初始化列表
+
+- 当初始化一个引用成员时
+- 当初始化一个常量成员时
+- 当调用一个基类的构造函数，而它拥有一组参数时
+- 当调用一个类类型成员的构造函数，而它拥有一组参数时
+
+
+---
+
+>和默认构造函数、拷贝构造函数相关的问题：是否可以使用memset来初始化一个对象、使用memcpy来拷贝一个对象？只有在”class不含任何由编译器产生的内部members“时才能有效运行。如果class声明一个或一个以上的virtual functions，或内含一个virtual base class，那么使用上述函数将会导致那些”被编译器产生的内部members“的初值被改写
+
+```
+class Shape{
+public:
+  //会改变内部的vptr
+  Shape() {memset(this,0,sizeof(Shape));}
+  //当传入一个子类对象的地址时，vptr会指向子类的虚函数表
+  Shape(const Shape &rhs) {memcpy(this,&rhs,sizeof(Shape));}
+  virtual ~Shape();
+};
+```
 
 # Data 语意学
 
 菱形继承各类的大小
+
+```
+class X { };
+class Y : public virtual X { };
+class Z : public virtual X { };
+class A : public Y, public Z { };
+
+int main(){
+    cout << "X:" << sizeof(X);                //X:1
+    cout << "  Y:" << sizeof(Y);              //Y:8，和机器，编译器有关
+    cout << "  Z:" << sizeof(Z);              //Z:8，和机器，编译器有关
+    cout << "  A:" << sizeof(A) << endl;      //A:16，和机器，编译器相关
+    return 0;
+}
+```
 
 ## Data Member 的绑定
 
@@ -33,6 +114,8 @@ tags:
   
 ## Data Member 的布局
 
+- 同一access section中的Nonstatic data members在class object中的排列顺序将和其被声明的顺序一样
+- C++标准允许多个access sections之中的data memebers自由排列，不必在乎它们出现在class声明中的顺序
 
 ## Data Member 的存取
 
@@ -49,7 +132,7 @@ tags:
   - vptr
 - 多重继承
   - 多重继承的问题主要发生于派生类和其第二或后继基类object之间的转换
-- 虚继承    
+- 虚继承：对象内存模型（虚继承指针）
   - 不变区域
   - 共享区域
 
@@ -65,19 +148,22 @@ tags:
 
 - Nonstatic Member Functions
   - 编译器内部会将“member 函数实例”转换为对等的“nonmember 函数实例”
-  - 含有 this 指针
+    - 改写函数原型
+    - 对非静态数据成员经 this 指针存取
+    - 重写为外部函数
 - Static Member Functions
   - static member function 没有 this 指针，因此差不多等同于 nonmember function
+  - 由于static member function没有this指针，所以其地址的类型并不是一个“指向class member function的指针”，而是一个"nonmember函数指针"
 - Virtual Member Functions
 
 ## Virtual Member Functions 
 
 - 单继承中的虚函数
   - (*ptr->vptr[1])(ptr)
-- 多继承中的虚函数
+- 多继承中的虚函数：必须在执行期调整 this 指针，指向对象指针指向的相应对象。
   - 在多重继承中支持virtual functions，其复杂度围绕在第二个及后继的base classes身上，以及“必须在执行期调整this指针”这一点
   - 在多重继承下，一个derived class内含n-1个"额外"的virtual tables，n表示其上一层base classes的个数（因此，单一继承将不会有额外的virtual tables）。
-- 虚继承下的虚函数
+- 虚继承下的虚函数：也需要在执行期调整 this 指针
 
 ## 指向 Member Function 的指针
 
@@ -85,6 +171,9 @@ float (Point::*pf)() = &Point::x;
 
 - 支持指向 Virtual Member Functions 的指针
 - 多重继承下，指向 Member Functions 的指针
+
+## inline functions
+
 
 # 构造、析构、拷贝语意学
 
