--- a/_posts/2019-07-14-流量入侵检测采样策略优化总结.md
+++ b/_posts/2019-07-14-流量入侵检测采样策略优化总结.md
@@ -8,6 +8,101 @@ tag:
 category: Security
 --- 
 
+实现论文，相当于是别人的项目，经过了我的实现，但终归也是一个项目。
+
+# 项目描述
+
+## 定位
+
+对一些论文中的方法进行实践，在此基础上，提出自己的方法进行改进。
+
+目标是提升检测率，检测率与采样率有关，在 SDN 的环境下早点检测到恶意流量就可以早点将流量导向蜜罐。所以要提高第一次的检测率，通过相关实验，测试不同的采样策略，找到最早检测到恶意流量的策略。
+
+## 一句话总结
+
+实现 SDN 下的入侵检测环境，采用不同的采样方法，检测不同的采样策略所产生的效果。<!--- 提出新的优化算法，提升检测的效果和效率。 -->
+
+## 基本实现
+
+突出重点在不同的采样策略的实现以及动态的流量控制
+
+
+
+# 用到的技术
+
+- C++
+- Python
+- Scrapy
+- Snort
+- SDN
+  - Open Vswitch
+  - Ryu
+  - Mininet
+  - OpenFlow
+- 采样策略
+- 流量特征分析
+- 流表下发
+- 蜜罐
+- wireshark 抓包 （TCPDUMP）
+
+# 架构类比
+
+- 流量发生器
+- 网络拓扑
+- 流量采集
+- 流量检测
+- 目标主机
+- 交换机
+- 控制器
+
+# 项目细节
+
+## 网络拓扑
+
+mininet 生成网络拓扑，包括：主机，交换机，控制器以及 Web 服务器
+
+可能并不需要服务器，只是研究不同的流量占比下采样的检测率，所以只需要制定的规则能够检测出相应的攻击就可以了。
+
+## 流量发生
+
+### 混淆流量
+
+scapy 发送混淆流量，主要是 L2 或者 L3 流量
+
+attacker 主机发送 ping 流量，作为攻击方式，死亡之 ping
+
+### 入侵流量
+
+恶意的 HTTP 请求等，设置一个有漏洞的 Web 服务器
+
+GoReplay 录制重放
+
+## 流量检测
+
+ovs 采样策略 sFlow->sFlowTool->snort
+
+snort 定义规则 将日志写入数据库
+
+snort 定义 ping 的规则，针对目标主机的 ping 操作都被视为恶意流量
+
+
+## 流量控制
+
+控制器从数据库里读取报警信息，并下发相应的流表到交换机，交换机根据流表将流量转发至蜜罐等设施。
+
+
+
+#　遇到的问题以及亮点
+
+实现了网络拓扑
+实现了漏洞重现
+实现了入侵检测
+实现了动态的流量控制
+
+采样率与检测率的关系
+不同的采样策略与检测率的关系
+测试不同的采样策略对检测率产生的影响
+
 # 什么是流量入侵检测
 
 
@@ -31,5 +126,7 @@ category: Security
 # 参考
 
 [基于Sdn和cnn的网络数据包的识别](https://www.sdnlab.com/23382.html)
-
+[KDD CUP 99数据集](https://blog.csdn.net/com_stu_zhang/article/details/6987632)
+[基于sFlow流量监控的DDOS防御和队列调整](https://www.sdnlab.com/12333.html)
+[Open vSwitch--ovs snort入侵检测](http://www.aiuxian.com/article/p-1627287.html)
 
