--- a/_posts/2019-07-16-重安装键攻击的仿真实现总结.md
+++ b/_posts/2019-07-16-重安装键攻击的仿真实现总结.md
@@ -1,15 +1,87 @@
 ---
 layout: article
 author: 月白
-title: 重安装建攻击的仿真实现总结
+title: 重安装键攻击的仿真实现总结
 tags: 
   - 网络安全
 ---
+
+如何突出高大上
+
+口语化的方式，类似讲稿，不能太啰嗦，***掌握话语权***
+
+可能需要用口语练习，不适合写出来（自己的写作水平还达不到，或者自己还不适应）
+
+参考论文以及网站上的介绍部分
+
+
+
+# 项目或者工作经验描述
+
+## 定位
+
+通过相关攻击的论文，根据论文中的方法，仿真的实现相关攻击的关键部分。
+
+## 一句话描述
+
+通过仿真的方式实现了重安装键攻击，获取通信方传递的信息。
+
+## 基本实现
+
+通过 Socket 编程的方式实现了 Client 和 AP 交互的过程，主要是 WPA2 协议的四次握手。然后通过实现中间人攻击，针对协议中的漏洞，获取通信传递内容的异或，最后采用类似彩虹表的方式解密通信内容。
+
+
+
+# 用到的技术
+
+- Java 
+- Socket 网络编程
+- WPA 2 协议
+- 中间人攻击
+- 彩虹表
+- 多线程
+- 加密算法
+
+# 项目细节
+
+## 四次握手
+
+
+
+## 彩虹表
+
+
+
+
+# 针对某种技术会遇到的问题
+
+I/O 阻塞的问题
+
+
+# 摘要
+
+# 介绍
+
+
+# 攻击 4 次握手协议
+
 # 什么是重安装键攻击
 
+
+KRACK 是针对 WIFI 协议漏洞的一种攻击方式，能够通过特定的操作实现攻击。通过实现这种攻击，能够对网络协议的知识加深理解，能够为科研做准备。
 
 # 可能造成的危害
 
 # 实现原理
+
+彩虹表
+
+表现出一定的特征，数理统计特征或者某种特定的攻击行为。
+
+# 统计和讨论
+
+# 相关工作
+
+# 结论
 
 
