--- a/_posts/2020-06-04-OpenGL-学习总结（1）.md
+++ b/_posts/2020-06-04-OpenGL-学习总结（1）.md
@@ -1,11 +1,9 @@
 ---
-title: OpenGL 学习总结：入门篇
+title: OpenGL 学习笔记(1)
 tags: OpenGL
 ---
 
 
-
-对每节的问题进行思考解答
 
 ## [创建窗口](https://learnopengl-cn.github.io/01%20Getting%20started/02%20Creating%20a%20window/)
 
@@ -135,21 +133,103 @@ glClear 状态使用函数
 
 > 在OpenGL中，任何事物都在3D空间中，而屏幕和窗口却是2D像素数组，这导致OpenGL的大部分工作都是关于把3D坐标转变为适应你屏幕的2D像素。3D坐标转为2D坐标的处理过程是由OpenGL的图形渲染管线（Graphics Pipeline，大多译为管线，实际上指的是一堆原始图形数据途经一个输送管道，期间经过各种变化处理最终出现在屏幕的过程）管理的。图形渲染管线可以被划分为两个主要部分：第一部分把你的**3D坐标转换为2D坐标**，第二部分是**把2D坐标转变为实际的有颜色的像素**。
 
-GPU是什么，它的组成原理
+GPU是什么，它的组成原理以及与CPU的区别（见参考）
 
-着色器详细解释
+着色器详细解释：在GPU上运行的程序，可编程的有顶点着色器、几何着色器和片段着色器
 
-2D坐标和像素的区别
+2D坐标和像素的区别？
 
 图形渲染管线详解
 
+![img](http://zhangwenli.com/blog/img/post/2017-02-24-what-is-a-shader-pipeline.jpg)
+
+图形渲染管线的步骤：
+
+- 顶点着色器
+- 图元装配
+- 几何着色器
+- 光栅化阶段
+- 片段着色器
+- Alpha测试和混合阶段
+
+视口变换
+
+**顶点缓冲对象**
+
+> 使用这些缓冲对象的好处是我们可以一次性的发送一大批数据到显卡上，而不是每个顶点发送一次。从CPU把数据发送到显卡相对较慢，所以只要可能我们都要尝试尽量一次性发送尽可能多的数据。当数据发送至显卡的内存中后，顶点着色器几乎能立即访问顶点，这是个非常快的过程。
+
+glGenBuffers
+
+glBindBuffer
+
+glBufferData
 
 
-顶点数据
 
-顶点
+**着色器语言（OpenGL Shading Language，GLSL）**
 
-顶点属性
+通过 layout (location = 0) 设定了输入变量的位置值
 
-> 为了让OpenGL知道我们的坐标和颜色值构成的到底是什么，OpenGL需要你去指定这些数据所表示的渲染类型。我们是希望把这些数据渲染成一系列的点？一系列的三角形？还是仅仅是一个长长的线？做出的这些提示叫做图元(Primitive)，任何一个绘制指令的调用都将把图元传递给OpenGL。这是其中的几个：GL_POINTS、GL_TRIANGLES、GL_LINE_STRIP。
+**编译着色器**
 
+glCreateShader
+
+glShaderSource
+
+glCompileShader
+
+glGetShaderiv
+
+glGetShaderInfoLog
+
+**着色器程序**
+
+glCreateProgram
+
+glAttachShader
+
+glLinkProgram
+
+glGetProgramiv
+
+glGetProgramInfoLog
+
+glUseProgram
+
+glDeleteShader
+
+**链接顶点属性**
+
+OpenGL如何把顶点数据链接到顶点着色器的顶点属性
+
+[glBindBuffer](https://www.khronos.org/registry/OpenGL-Refpages/gl4/html/glBindBuffer.xhtml): 
+
+> Buffer object names and the corresponding buffer object contents are local to the shared object space of the current GL rendering context; two rendering contexts share buffer object names only if they explicitly enable sharing between contexts through the appropriate GL windows interfaces functions.
+
+[glBufferData](https://www.khronos.org/registry/OpenGL-Refpages/gl4/html/glBufferData.xhtml)
+
+glVertexAttribPointer
+
+**顶点数组对象**
+
+顶点缓冲对象包含了一系列顶点的属性，而顶点数组对象包含了一系列的顶点。可以将VBO理解为一个物体的所有顶点，而VAO对应了多个物体。？
+
+> 顶点数组对象(Vertex Array Object, VAO)可以像顶点缓冲对象那样被绑定，任何随后的顶点属性调用都会储存在这个VAO中。
+
+OpenGL 中的 bind 到底是什么意思呢？参考[Concept behind OpenGL's 'Bind' functions](https://stackoverflow.com/questions/9758884/concept-behind-opengls-bind-functions)
+
+**索引缓冲对象**
+
+glDrawElements
+
+> VAO绑定时正在绑定的索引缓冲对象会被保存为VAO的元素缓冲对象。绑定VAO的同时也会自动绑定EBO。
+
+### 参考
+
+[GPU计算 -- GPU体系结构及CUDA编程模型](https://hustcat.github.io/gpu-architecture/)
+
+[计算机组成原理 — GPU 图形处理器](https://blog.csdn.net/Jmilk/article/details/99315370)
+
+[细说图形学渲染管线]([https://positiveczp.github.io/%E7%BB%86%E8%AF%B4%E5%9B%BE%E5%BD%A2%E5%AD%A6%E6%B8%B2%E6%9F%93%E7%AE%A1%E7%BA%BF.html](https://positiveczp.github.io/细说图形学渲染管线.html))
+
+[致从没看懂过着色器代码的你](http://zhangwenli.com/blog/2017/02/24/what-is-a-shader/)
