--- a/_posts/2020-06-04-OpenGL-学习总结（1）.md
+++ b/_posts/2020-06-04-OpenGL-学习总结（1）.md
@@ -233,3 +233,5 @@ glDrawElements
 [细说图形学渲染管线]([https://positiveczp.github.io/%E7%BB%86%E8%AF%B4%E5%9B%BE%E5%BD%A2%E5%AD%A6%E6%B8%B2%E6%9F%93%E7%AE%A1%E7%BA%BF.html](https://positiveczp.github.io/细说图形学渲染管线.html))
 
 [致从没看懂过着色器代码的你](http://zhangwenli.com/blog/2017/02/24/what-is-a-shader/)
+
+[Vertex buffer object](https://en.wikipedia.org/wiki/Vertex_buffer_object)
