--- a/_posts/2020-06-17-OpenGL-学习笔记(3).md
+++ b/_posts/2020-06-17-OpenGL-学习笔记(3).md
@@ -57,8 +57,6 @@ tags: OpenGL
 
 ### 矩阵的组合
 
-矩阵变换组合的顺序？
-
 关于缩放、位移以及旋转的思考：这些操作是针对的向量呢还是向量的顶点呢？如何实现一个正方体的相关变换呢？
 
 缩放的参数是变量，而位移的参数是向量
@@ -67,5 +65,14 @@ tags: OpenGL
 
 缩放：一个有长度的点，在各个空间的维度进行缩放。
 
-![pic](/assets/images/logo/2020_06_17.gif)
+![pic](/assets/images/2020_06_17.gif)
+
+矩阵变换组合的顺序？
+
+位移(1, 0.5)，缩放(0.5, 2)
+
+先位移，再缩放
+![pic](/assets/images/2020_06_17_trans_scale.png)
+先缩放，再位移
+![pic](/assets/images/2020_06_17_scale_trans.png)
 
