--- a/_posts/2020-06-21-OpenGL-学习笔记(5).md
+++ b/_posts/2020-06-21-OpenGL-学习笔记(5).md
@@ -110,3 +110,11 @@ vec3 specular = specularStrength * spec * lightColor;  // 镜面反射分量
 ```
 
 光照着色器在顶点着色器以及片段着色器中实现的区别：顶点着色器中相对于片段着色器，顶点较少，更高效，开销较低，但真实性较差。
+
+最后，片段的颜色：
+
+```C++
+vec3 result = (ambient + diffuse + specular) * objectColor;
+FragColor = vec4(result, 1.0);
+```
+
