--- a/_posts/2020-06-22-OpenGL-学习笔记(6).md
+++ b/_posts/2020-06-22-OpenGL-学习笔记(6).md
@@ -1,6 +1,16 @@
 ---
 title: OpenGL 学习笔记(6)
 tags: OpenGL
+mode: immersive
+header:
+  theme: dark
+article_header:
+  type: overlay
+  theme: dark
+  background_color: '#203028'
+  background_image:
+    gradient: 'linear-gradient(135deg, rgba(34, 139, 87 , .4), rgba(139, 34, 139, .4))'
+    src: /docs/assets/images/cover3.jpg
 ---
 
 # 材质
@@ -26,7 +36,7 @@ struct Material {
 uniform Material material;
 ```
 
-**Q:材质属性中的四个分量与基础光照中的四个分量的区别？**
+**Q:材质属性中的四个分量与《基础光照》中的四个分量的区别？**
 
 **A:**这里的材质属性是一组常量，即不管片段以及光照的位置是什么，对于一种材质只有一组材质属性。而上一节《基础光照》中的漫反射光照以及镜面光照，对不同位置的片段，对应不同的值。材质属性是常量，光照分量是变量。
 
@@ -70,6 +80,10 @@ uniform Light light;
 
 与材质属性相似，光照属性也是一组常量。
 
+**Q:**光照属性和《基础光照》中四个分量的区别？
+
+**A:**光照属性是常量，而《基础光照》中的四个分量则是变量，同材质属性。
+
 更新片段着色器：
 
 ```C++
@@ -78,10 +92,22 @@ vec3 diffuse  = light.diffuse * (diff * material.diffuse);
 vec3 specular = light.specular * (spec * material.specular);
 ```
 
-这里的光照属性是指光照强度还是光照颜色呢？需不需要与光照颜色相乘？
+**Q:**这里的光照属性是指光照强度还是光照颜色呢？需不需要与光照颜色相乘？
 
 ## 不同的光源颜色
 
 > 我们可以利用sin和glfwGetTime函数改变光源的环境光和漫反射颜色，从而很容易地让光源的颜色随着时间变化
 
-为什么没有改变反射光颜色呢？
+**Q:**为什么没有改变反射光颜色呢？
+
+**A:**因为文中提到“镜面光分量通常会保持为`vec3(1.0)`，以最大强度发光“，所以不需要改变反射光强度。
+
+**Q:**环境光和漫反射光的关系？代码中为什么这样写？
+
+```C++
+glm::vec3 diffuseColor = lightColor   * glm::vec3(0.5f); // 降低影响
+glm::vec3 ambientColor = diffuseColor * glm::vec3(0.2f); // 很低的影响
+```
+
+# 光照贴图
+
