--- a/_posts/2020-06-22-OpenGL-学习笔记(6).md
+++ b/_posts/2020-06-22-OpenGL-学习笔记(6).md
@@ -111,3 +111,173 @@ glm::vec3 ambientColor = diffuseColor * glm::vec3(0.2f); // 很低的影响
 
 # 光照贴图
 
+使用光照贴图的原因：
+
+> 在上一节中，我们将整个物体的材质定义为一个整体，但现实世界中的物体通常并不只包含有一种材质，而是由多种材质所组成。使用光照贴图，能够对漫反射分量（以及间接地对环境光分量，它们几乎总是一样的）和镜面光分量实现更精准的控制。
+
+关键词：
+
+- 漫反射贴图
+- 镜面光贴图
+
+注：漫反射分量和环境光分量几乎总是一样的。
+
+片段着色器的材质属性：
+
+```c++
+struct Material {
+    sampler2D diffuse;
+    sampler2D specular;
+    float     shininess;
+};
+```
+
+获取片段对应的颜色：
+
+```c++
+vec3 ambient  = light.ambient  * vec3(texture(material.diffuse, TexCoords));
+vec3 diffuse  = light.diffuse  * diff * vec3(texture(material.diffuse, TexCoords));  
+vec3 specular = light.specular * spec * vec3(texture(material.specular, TexCoords));
+FragColor = vec4(ambient + diffuse + specular, 1.0);
+```
+
+
+
+拓展知识： 
+
+- 光照颜色和光照强度
+
+- 法线/凹凸贴图(Normal/Bump Map)或者反射贴图(Reflection Map)
+- 放射光贴图(Emission Map)
+
+# 投光物
+
+关键词：
+
+- 定向光(Directional Light)
+- 点光源(Point Light)
+- 聚光(Spotlight)
+
+## 平行光
+
+在光照属性结构体中用平行光的direction向量代替position来计算lightDir向量。
+
+```c++
+vec3 lightDir = normalize(-light.direction);
+```
+
+## 点光源
+
+### 衰减
+
+> 随着光线传播距离的增长逐渐削减光的强度通常叫做衰减(Attenuation)。
+
+衰减公式：
+
+$$\begin{equation} F_{att} = \frac{1.0}{K_c + K_l * d + K_q * d^2} \end{equation}$$
+
+在这里$$d$$代表了片段距光源的距离。接下来为了计算衰减值，我们定义3个（可配置的）项：常数项$$K_{c}$$、一次项$$K_{l}$$和二次项$$K_{q}$$。
+
+对这三个项如何设置取决于很多因素：环境、希望光覆盖的距离、光的类型等。
+
+点光源结构体：
+
+```c++
+struct Light {
+    vec3 position;  
+
+    vec3 ambient;
+    vec3 diffuse;
+    vec3 specular;
+
+    float constant;
+    float linear;
+    float quadratic;
+};
+```
+
+片段着色器实现衰减：
+
+```c++
+float distance    = length(light.position - FragPos);
+float attenuation = 1.0 / (light.constant + light.linear * distance + 
+                light.quadratic * (distance * distance));
+```
+
+将衰减值包含到光照计算中，将它分别乘以环境光、漫反射和镜面光颜色。
+
+```c++
+ambient  *= attenuation; 
+diffuse  *= attenuation;
+specular *= attenuation;
+```
+
+## 聚光
+
+> OpenGL中聚光是用一个世界空间位置、一个方向和一个切光角(Cutoff Angle)来表示的，切光角指定了聚光的半径（译注：是圆锥的半径不是距光源距离那个半径）。
+
+![img](https://learnopengl-cn.github.io/img/02/05/light_casters_spotlight_angles.png)
+
+> 我们要做的就是计算LightDir向量和SpotDir向量之间的点积，并将它与切光角$$\phi$$值对比。
+
+### 手电筒
+
+> 在片段着色器中我们需要的值有聚光的位置向量（来计算光的方向向量）、聚光的方向向量和一个切光角。
+
+接下来就是计算$$\theta$$值，并将它和切光角$$\phi$$对比，来决定是否在聚光的内部：
+
+```c++
+float theta = dot(lightDir, normalize(-light.direction));
+
+if(theta > light.cutOff) 
+{       
+  // 执行光照计算
+}
+else  // 否则，使用环境光，让场景在聚光之外时不至于完全黑暗
+  color = vec4(light.ambient * vec3(texture(material.diffuse, TexCoords)), 1.0);
+```
+
+### 平滑/软化边缘
+
+> 为了创建一种看起来边缘平滑的聚光，我们需要模拟聚光有一个内圆锥(Inner Cone)和一个外圆锥(Outer Cone)。
+
+内外光锥之间的光照强度：
+
+$$\begin{equation} I = \frac{\theta - \gamma}{\epsilon} \end{equation}$$
+
+这里$$\epsilon$$(Epsilon)是内（$$ϕ$$）和外圆锥（$$γ$$）之间的余弦值差（$$ϵ=ϕ−γ$$）。最终的$$I$$值就是在当前片段聚光的强度。
+
+```c++
+float theta     = dot(lightDir, normalize(-light.direction));
+float epsilon   = light.cutOff - light.outerCutOff;
+float intensity = clamp((theta - light.outerCutOff) / epsilon, 0.0, 1.0);    
+...
+// 将不对环境光做出影响，让它总是能有一点光
+diffuse  *= intensity;
+specular *= intensity;
+...
+```
+
+使用计算出来的强度值直接乘以光照分量
+
+# 多光源
+
+```c++
+out vec4 FragColor;
+
+void main()
+{
+  // 定义一个输出颜色值
+  vec3 output;
+  // 将定向光的贡献加到输出中
+  output += someFunctionToCalculateDirectionalLight();
+  // 对所有的点光源也做相同的事情
+  for(int i = 0; i < nr_of_point_lights; i++)
+    output += someFunctionToCalculatePointLight();
+  // 也加上其它的光源（比如聚光）
+  output += someFunctionToCalculateSpotLight();
+
+  FragColor = vec4(output, 1.0);
+}
+```
+
