--- a/_posts/2020-06-23-OpenGL-学习笔记(8).md
+++ b/_posts/2020-06-23-OpenGL-学习笔记(8).md
@@ -1,6 +1,6 @@
 ---
-title: 读书笔记测试
-tags: 读书笔记
+title: OpenGL 学习笔记(8)
+tags: OpenGL
 mode: immersive
 header:
   theme: dark
@@ -10,6 +10,6 @@ article_header:
   background_color: '#203028'
   background_image:
     gradient: 'linear-gradient(135deg, rgba(34, 139, 87 , .4), rgba(139, 34, 139, .4))'
-    src: /assets/images/cover/cover3.jpg
+    src: /docs/assets/images/cover1.jpg
 ---
-测试
+
