--- a/_posts/2020-06-23-OpenGL-学习笔记(8).md
+++ b/_posts/2020-06-23-OpenGL-学习笔记(8).md
@@ -13,3 +13,37 @@ article_header:
     src: /docs/assets/images/cover1.jpg
 ---
 
+# 深度测试
+
+关键词：
+
+- 深度缓冲
+- 深度测试
+
+运行顺序：深度缓冲是在片段着色器以及模板测试(Stencil Testing)运行之后在屏幕空间中运行的。
+
+对比方式：GLSL内建变量*gl_FragCoord*
+
+> gl_FragCoord的x和y分量代表了片段的屏幕空间坐标（其中(0, 0)位于左下角）。gl_FragCoord中也包含了一个z分量，它包含了片段真正的深度值。
+
+启用深度测试：
+
+```c++
+glEnable(GL_DEPTH_TEST);
+glClear(GL_COLOR_BUFFER_BIT | GL_DEPTH_BUFFER_BIT);
+glDepthMask(GL_FALSE);
+```
+
+## 深度测试函数
+
+深度测试函数允许我们来控制OpenGL什么时候该**通过或丢弃一个片段**，什么时候去**更新深度缓冲**。
+
+```c++
+glDepthFunc(GL_LESS);
+```
+
+## 深度值精度
+
+> 深度缓冲包含了一个介于0.0和1.0之间的深度值，它将会与观察者视角所看见的场景中所有物体的z值进行比较。
+
+线性深度缓冲
