--- a/_posts/2019-04-01-算法导论之动态规划疑与析.md
+++ b/_posts/2019-04-01-算法导论之动态规划疑与析.md
@@ -1,7 +1,8 @@
 ---
 title: 算法导论之动态规划疑与析
 date: 2019-04-01 14:55:26
-tags: 读书笔记
+categories: 算法
+tags: 动态规划
 ---
 
 关于算法导论之动态规划中矩阵链乘法问题里 i, j 可变，有一些疑惑。
