--- a/_posts/2019-04-16-C-对象模型.md
+++ b/_posts/2019-04-16-C-对象模型.md
@@ -1,7 +1,8 @@
 ---
 title: C++ 对象模型
 date: 2019-04-16 10:33:51
-tags:
+categories: C++
+tags: 对象模型
 ---
 
 不同的编译器对于对象模型的实现可能会不一样。编译器的功能是将 C++ 代码转换为汇编语言，而汇编语言是一系列的操作寄存器及内存的代码，也就是说在编译的时候，编译器就确定了对象在内存中是如何存在的（通过生成对应的汇编语言）。
@@ -71,7 +72,6 @@ int main(){
 - 当初始化一个常量成员时
 - 当调用一个基类的构造函数，而它拥有一组参数时
 - 当调用一个类类型成员的构造函数，而它拥有一组参数时
-
 
 ---
 
